[package]
name = "actix-web-actors"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix actors support for actix web framework."
readme = "README.md"
keywords = ["actix", "http", "web", "framework", "async"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-web-actors/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_web_actors"
path = "src/lib.rs"

[dependencies]
actix = "0.9.0"
actix-web = { path = ".." }
actix-http = { path = "../actix-http" }
actix-codec = { git = "https://github.com/Litarvan/actix-net.git" }
bytes = "0.5.2"
futures = "0.3.1"
pin-project = "0.4.6"

[dev-dependencies]
actix-rt = { git = "https://github.com/Litarvan/actix-net.git" }
env_logger = "0.6"
